<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetActivity"
    android:background="@color/colorBULEMORE">
    <RelativeLayout
        android:id="@+id/RE1_fo"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/arrow_fo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:onClick="OnBack" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/retrievePassword"
            android:textColor="#FAFAFA"
            android:textSize="22sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/RE1_fo">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="150dp"
            android:layout_above="@+id/yes_fo">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RE2_fo">
                <TextView
                    android:id="@+id/userName_fo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userName_re"
                    android:layout_centerVertical="true"
                    android:textColor="#000000"/>
                <EditText
                    android:id="@+id/EDuserName_fo"
                    android:layout_toEndOf="@+id/userName_fo"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:singleLine="true"
                    android:textSize="18sp"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/RE3_fo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RE2_fo"
                android:layout_marginTop="25dp">
                <TextView
                    android:id="@+id/userPass_fo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userPass_re"
                    android:layout_centerVertical="true"
                    android:textColor="#000000"/>
                <EditText
                    android:id="@+id/EDuserPassWord_fo"
                    android:layout_toEndOf="@+id/userPass_fo"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:singleLine="true"
                    android:textSize="18sp"/>
        </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RE3_fo"
                android:layout_marginTop="25dp">
                <TextView
                    android:id="@+id/userPhone_fo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userPhone_re"
                    android:layout_centerVertical="true"
                    android:textColor="#000000"/>
                <EditText
                    android:id="@+id/EDuserPhone_fo"
                    android:layout_toEndOf="@+id/userPhone_fo"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:inputType="phone"/>
            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/yes_fo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_marginBottom="140dp">
            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_login"
                android:layout_marginEnd="40dp"
                android:onClick="forget"/>
            <Button
                android:id="@+id/backToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backToLogin"
                android:layout_marginStart="40dp"
                android:onClick="OnBack"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>