<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:id="@+id/RE1_re"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorBULEMORE">
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:onClick="OnBack" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#FAFAFA"
            android:textSize="22sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/RE1_re">
        <RelativeLayout
            android:id="@+id/RE3_re"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <RelativeLayout
                android:id="@+id/RE2_re"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorBULEMORE">
            </RelativeLayout>
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/headPict"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/user"
                app:riv_border_color="#000000"
                app:riv_border_width="1.5dp"
                app:riv_oval="true"
                android:layout_marginTop="100dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/RE3_re">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="35dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ET1_re">
                    <TextView
                        android:id="@+id/userName_re"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userName_re"
                        android:layout_centerVertical="true"
                        android:textColor="#000000"/>
                    <EditText
                        android:id="@+id/editRE_userName"
                        android:layout_toEndOf="@+id/userName_re"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="11"
                        android:singleLine="true"
                        android:textSize="18sp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ET2_re"
                    android:layout_below="@+id/ET1_re"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/userPass_re"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userPass_re"
                        android:layout_centerVertical="true"
                        android:textColor="#000000"/>
                    <EditText
                        android:id="@+id/editRE_userPass"
                        android:layout_toEndOf="@+id/userPass_re"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="11"
                        android:singleLine="true"
                        android:textSize="18sp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ET2_re"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/userPhone_re"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userPhone_re"
                        android:layout_centerVertical="true"
                        android:textColor="#000000"/>
                    <EditText
                        android:id="@+id/editRE_userPhone"
                        android:layout_toEndOf="@+id/userPhone_re"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="11"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:inputType="phone"/>
                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:layout_marginBottom="85dp">
                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:layout_marginEnd="40dp"
                    android:onClick="register"/>
                <Button
                    android:id="@+id/backToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backToLogin"
                    android:layout_marginStart="40dp"
                    android:onClick="OnBack"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_fail"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:onClick="openBrowser"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>